ensure round column numbers
- if any of the columns don't look right it will raise a compiler warning

--- a/drupal/sites/all/themes/checkdesk/assets/css/style.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style.css
@@ -5061,7 +5061,7 @@ form .form-item-pass .password-suggestions {
   border: 0;
   padding-top: 11px;
   padding-bottom: 11px;
-  width: 47.59825%;
+  width: 100%;
   float: right;
   margin-right: 0;
   #margin-left: -11px;
@@ -5673,7 +5673,7 @@ form div.form-wrapper {
     border: 0;
     padding-top: 11px;
     padding-bottom: 11px;
-    width: 47.59825%;
+    width: 100%;
     float: right;
     margin-right: 0;
   }
@@ -6384,7 +6384,7 @@ body.sidebar-first #main #sidebar-first.column form .form-item-pass .password-su
   border: 0;
   padding-top: 11px;
   padding-bottom: 11px;
-  width: 47.59825%;
+  width: 100%;
   float: right;
   margin-right: 0;
   #margin-left: -11px;
@@ -7129,7 +7129,7 @@ body.sidebar-first #main div#content .inner #block-views-desk-updates-block {
     border: 0;
     padding-top: 11px;
     padding-bottom: 11px;
-    width: 46.30872%;
+    width: 100%;
     float: right;
     margin-right: 0;
   }
@@ -7856,7 +7856,7 @@ body.sidebar-first #main div#content .inner #block-views-desk-updates-block {
     border: 0;
     padding-top: 11px;
     padding-bottom: 11px;
-    width: 47.59825%;
+    width: 100%;
     float: right;
     margin-right: 0;
   }
@@ -8583,7 +8583,7 @@ body.sidebar-first #main div#content .inner #block-views-desk-updates-block {
     border: 0;
     padding-top: 11px;
     padding-bottom: 11px;
-    width: 50%;
+    width: 100%;
     float: right;
     margin-right: 0;
   }
@@ -9597,7 +9597,7 @@ body.page-node-add .node-form form .form-item-pass .password-suggestions {
   border: 0;
   padding-top: 11px;
   padding-bottom: 11px;
-  width: 47.59825%;
+  width: 100%;
   float: right;
   margin-right: 0;
   #margin-left: -11px;
