--- a/drupal/sites/all/themes/checkdesk/assets/scss/_form_password.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/_form_password.scss
@@ -112,7 +112,7 @@
     .password-suggestions {
       @include reset-box-model;
       padding: { top: $gw; bottom: $gw; } 
-      @include span-columns(half-of($w) omega, $w);
+      @include span-columns($w omega, $w);
       li {
         padding-#{opposite-position($from-direction)}: $gw;
       }
